--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
           plugin_languages: yes
           plugin_languages_indepth: yes
           commits_authoring: Erwann Lagouche, AirOne01, p2101604, popgthyrd@gmail.com
+          repositories_skipped: AirOne01/AirOne01
           plugin_languages_ignored: shell
           plugin_languages_analysis_timeout: 15
           plugin_languages_categories: markup, programming
