--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,12 +32,10 @@ jobs:
           base: header, activity, community, repositories
           config_octicon: yes
           config_timezone: Europe/Paris
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
-          plugin_languages: yes
-          plugin_languages_indepth: yes
           commits_authoring: Erwann Lagouche, AirOne01, p2101604, popgthyrd@gmail.com
           repositories_skipped: AirOne01/AirOne01
+          plugin_languages: yes
+          plugin_languages_indepth: yes
           plugin_languages_ignored: shell
           plugin_languages_analysis_timeout: 15
           plugin_languages_categories: markup, programming
@@ -50,10 +48,6 @@ jobs:
           plugin_languages_threshold: 0%
           plugin_projects: yes
           plugin_projects_limit: 4
-          plugin_people: yes
-          plugin_people_limit: 24
-          plugin_people_size: 28
-          plugin_people_types: followers
           
       - uses: lowlighter/metrics@latest
         with:
@@ -64,13 +58,8 @@ jobs:
           base: ""
           config_octicon: yes
           config_timezone: Europe/Paris
-          plugin_music: yes
-          plugin_music_limit: 6
-          plugin_music_mode: top
-          plugin_music_provider: spotify
-          plugin_music_time_range: short
-          plugin_music_top_type: tracks
-          plugin_music_token: "${{ secrets.CLIENT_ID }}, ${{ secrets.CLIENT_SECRET }}, ${{ secrets.REFRESH_TOKEN }}"
+          commits_authoring: Erwann Lagouche, AirOne01, p2101604, popgthyrd@gmail.com
+          repositories_skipped: AirOne01/AirOne01
           plugin_achievements: yes
           plugin_achievements_display: compact
           plugin_achievements_secrets: yes
@@ -78,3 +67,9 @@ jobs:
           plugin_notable: yes
           plugin_notable_from: organization
           plugin_notable_types: commit
+          plugin_people: yes
+          plugin_people_limit: 24
+          plugin_people_size: 28
+          plugin_people_types: followers
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
