--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
-          filename: metrics_left.svg
+          filename: metrics.svg
           template: classic
           base: header, activity, community, repositories
           config_octicon: yes
@@ -46,30 +46,10 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
-          plugin_projects: yes
-          plugin_projects_limit: 4
-          
-      - uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.METRICS_TOKEN }}
-
-          filename: metrics_right.svg
-          template: classic
-          base: ""
-          config_octicon: yes
-          config_timezone: Europe/Paris
-          commits_authoring: Erwann Lagouche, AirOne01, p2101604, popgthyrd@gmail.com
-          repositories_skipped: AirOne01/AirOne01
           plugin_achievements: yes
           plugin_achievements_display: compact
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
+          plugin_achievements_threshold: B
           plugin_notable: yes
-          plugin_notable_from: organization
+          plugin_notable_from: all
           plugin_notable_types: commit
-          plugin_people: yes
-          plugin_people_limit: 24
-          plugin_people_size: 28
-          plugin_people_types: followers
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
