--- a/.github/workflows/github-wakatime-stats.yml
+++ b/.github/workflows/github-wakatime-stats.yml
@@ -18,15 +18,16 @@ jobs:
           COMMIT_EMAIL: "41898282+github-actions[bot]@users.noreply.github.com"
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_OS: "False"
+          SHOW_OS: "True"
           SHOW_PROJECTS: "True"
           SHOW_UPDATED_DATE: "True"
           SHOW_PROFILE_VIEWS: "False"
-          SHOW_EDITORS: "False"
+          SHOW_EDITORS: "True"
           SHOW_LANGUAGE: "True"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_LINES_OF_CODE: "True"
           SHOW_COMMIT: "True"
           SHOW_LOC_CHART: "False"
           SHOW_DAYS_OF_WEEK: "False"
-          SHOW_SHORT_INFO: "True"
+          SHOW_SHORT_INFO: "False"
+          SHOW_TIMEZONE: "False"
